--- a/recipes/zucchiniBreadPancakes.html
+++ b/recipes/zucchiniBreadPancakes.html
@@ -7,5 +7,28 @@
 </head>
 <body>
     <h1>Zucchini Bread Pancakes</h1>
+    <img src="https://www.allrecipes.com/thmb/mwy6cwXVyR6IrbmUOiJWyLYQ9cM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc()/9011360-dd1c3fabf1ee467c8f514da836cc3aa0.jpg"
+         alt="Zucchini Bread Pancakes">
+    <h2>Pancakes for healthy people</h2>
+    <p>For people who want to add vegetables to pancakes to make themselves feel better about eating unhealthy</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 tablespoon lemon juice</li>
+        <li>1 cup milk</li> 
+        <li>1.5 cups all-purpose flour</li>   
+        <li> 2 tablespoons white sugar</li>   
+        <li>1 teaspoon ground cinnamon</li>
+        <li>1 teaspoon baking powder</li>
+        <li>1/2 teaspoon baking soda</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1 large egg</li>
+        <li>2 tablespoons unsalted butter, melted</li> 
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup shredded zucchini</li>  
+        <li>nonstick cooking spray</li>
+    </ul>
+
+    <h2>Recipe</h2>
 </body>
 </html>
