--- a/recipes/slowCookerMacAndCheese.html
+++ b/recipes/slowCookerMacAndCheese.html
@@ -7,6 +7,21 @@
 </head>
 <body>
     <h1>Slow Cooker Mac and Cheese</h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9429606.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="Mac and Cheese">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9429606.jpg&q=60&c=sc&orient=true&poi=auto&h=512" 
+         alt="Mac and Cheese">
+    <h2>A recipe for those who do not know how to cook</h2>
+    <p>Tired of cooking insteant ramen try this instead it is just as unhealthy and only a little bit harder to cook</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+       <li>1 package elbow macaroni (the main ingredient)</li>
+       <li>1/2 cup butter (The unhealthy kind)</li>
+       <li>salt and ground black pepper to taste (for all us Connoisseurs) </li>
+       <li>1 (16 ounce) package shredded Cheddar cheese (The thing that causes heart attack)</li>
+       <li>Cow Milk (Other animals work too but this is recommend)</li>
+    </ul>
+
+    <h2>Recipe</h2>
+
 </body>
 </html>
