Added steps to recipes

--- a/recipes/slowCookerMacAndCheese.html
+++ b/recipes/slowCookerMacAndCheese.html
@@ -22,6 +22,11 @@
     </ul>
 
     <h2>Recipe</h2>
-
+    <ol>
+        <li>Boil your macroni</li>
+        <li>Once boiled mix the rest of the ingredients</li>
+        <li>Eat the food</li>
+    </ol>
+    <a href="/odin-recipes/index.html">Back to home</a>
 </body>
 </html>
