--- a/recipes/zucchiniBreadPancakes.html
+++ b/recipes/zucchiniBreadPancakes.html
@@ -30,5 +30,15 @@
     </ul>
 
     <h2>Recipe</h2>
+    <ol>
+        <li>Add lemon juice to a cup of milk. Set aside until milk starts to curdle, 5 to 10 minutes</li>
+        <li>Combine flour, sugar, cinnamon, baking powder, baking soda, and salt in a large bowl. Make a well in the center. Pour in
+        curdled milk, egg, melted butter, and vanilla extract. Stir with a spoon or whisk until the batter is just combined. Add
+        shredded zucchini and mix until well incorporated</li>
+        <li>Heat a large skillet over medium heat, and coat with cooking spray. Pour 1/4 cupfuls of batter onto the skillet, and
+        cook until bubbles appear on the surface, about 2 minutes. Flip with a spatula, and cook until browned, about 2 more
+        minutes</li>
+    </ol>
+    <a href="/odin-recipes/index.html">Back to home</a>
 </body>
 </html>
