--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6d/Good_Food_Display_-_NCI_Visuals_Online.jpg/600px-Good_Food_Display_-_NCI_Visuals_Online.jpg" width="500" height="300">
     <ul>
        <li><a href="recipes/slowCookerMacAndCheese.html">Slow Cooker Mac and Cheese</a></li>
        <li><a href="recipes/Deep-FriedOreos.html">Deep-Fried Oreos</a></li>
