--- a/recipes/Deep-FriedOreos.html
+++ b/recipes/Deep-FriedOreos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="recipes.css" />
+    <title>Fried Oreos</title>
 </head>
 <body>
     <h1>Deep-Fried Oreos</h1>
